--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=a5839fe3c2d5bb1cf188",
-    "/css/app.css": "/css/app.css?id=63d795168467416e191d",
-    "/js/app.js.map": "/js/app.js.map?id=6bf639092c3b847739b6",
-    "/css/app.css.map": "/css/app.css.map?id=4a8806aa7d1835ef1f0d"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
